--- a/index.html
+++ b/index.html
@@ -1,46 +1,153 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day Special</title>
+    <title>Il Nostro Segreto ❤️</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Happy Valentine's Day!</h1>
-        <p>Your love story starts here...</p>
-    </header>
+    <!-- Floating hearts animation -->
+    <div class="hearts-container" id="heartsContainer"></div>
 
-    <section id="proposal">
-        <h2>Special Proposal</h2>
-        <p>Will you marry me? 💍</p>
-        <button onclick="alert('Yes!💖')">Propose</button>
-    </section>
+    <!-- Home Page -->
+    <div class="page active" id="homePage">
+        <div class="home-content">
+            <h1 class="main-title">Il Nostro Segreto</h1>
+            <p class="subtitle">Un viaggio attraverso i nostri momenti speciali</p>
+            <button class="btn-start" onclick="startJourney()">
+                Inizia l'Avventura
+                <span class="heart-icon">❤️</span>
+            </button>
+        </div>
+    </div>
 
-    <section id="games">
-        <h2>Fun Valentine's Day Games</h2>
-        <ul>
-            <li>Love Bingo</li>
-            <li>Romantic Charades</li>
-            <li>Valentine's Trivia</li>
-        </ul>
-    </section>
+    <!-- Map Page -->
+    <div class="page" id="mapPage">
+        <button class="btn-back" onclick="goHome()">← Indietro</button>
+        
+        <div class="map-container">
+            <h2 class="map-title">I Nostri Luoghi del Cuore</h2>
+            <p class="map-subtitle">Clicca su ogni cuore per rivivere quel momento</p>
+            
+            <div class="map-wrapper">
+                <!-- Location 1 -->
+                <div class="location" style="top: 25%; left: 30%;" onclick="showMemory(1)">
+                    <div class="location-marker">
+                        <span class="marker-icon">❤️</span>
+                        <span class="marker-label">Luogo 1</span>
+                    </div>
+                </div>
 
-    <section id="map">
-        <h2>Find Your Way to Love!</h2>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434507353!2d144.95373631594288!3d-37.81720997975156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f680ec7%3A0x5045675218cee80!2sMelbourne%20Central!5e0!3m2!1sen!2sau!4v1611949923456!5m2!1sen!2sau"
-            width="600"
-            height="450"
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy">
-        </iframe>
-    </section>
+                <!-- Location 2 -->
+                <div class="location" style="top: 50%; left: 60%;" onclick="showMemory(2)">
+                    <div class="location-marker">
+                        <span class="marker-icon">❤️</span>
+                        <span class="marker-label">Luogo 2</span>
+                    </div>
+                </div>
 
-    <footer>
-        <p>© 2026 Romantic Ventures. All Rights Reserved.</p>
-    </footer>
+                <!-- Location 3 -->
+                <div class="location" style="top: 70%; left: 40%;" onclick="showMemory(3)">
+                    <div class="location-marker">
+                        <span class="marker-icon">❤️</span>
+                        <span class="marker-label">Luogo 3</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <button class="btn-secret" onclick="showSecretPrompt()">
+            🔒 Scopri i Segreti
+        </button>
+    </div>
+
+    <!-- Memory Modal -->
+    <div class="modal" id="memoryModal">
+        <div class="modal-content">
+            <span class="modal-close" onclick="closeMemory()">&times;</span>
+            <div class="memory-content">
+                <h3 class="memory-title" id="memoryTitle"></h3>
+                <div class="memory-image" id="memoryImage"></div>
+                <p class="memory-text" id="memoryText"></p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Secret Pages -->
+    <div class="page" id="secretPage1">
+        <button class="btn-back" onclick="backToMap()">← Torna alla Mappa</button>
+        <div class="secret-content">
+            <h2 class="secret-title">Primo Segreto</h2>
+            <div class="secret-box">
+                <p class="secret-text">
+                    Ogni volta che ti guardo, il mondo si ferma. 
+                    Sei la mia persona preferita, il mio posto sicuro, 
+                    la mia casa ovunque io sia.
+                </p>
+                <div class="secret-image-placeholder">
+                    📸 [Aggiungi qui la tua foto speciale]
+                </div>
+            </div>
+            <button class="btn-next-secret" onclick="promptSecret(2)">
+                Scopri il Prossimo Segreto →
+            </button>
+        </div>
+    </div>
+
+    <div class="page" id="secretPage2">
+        <button class="btn-back" onclick="backToMap()">← Torna alla Mappa</button>
+        <div class="secret-content">
+            <h2 class="secret-title">Secondo Segreto</h2>
+            <div class="secret-box">
+                <p class="secret-text">
+                    Grazie per ogni sorriso, ogni abbraccio, ogni momento condiviso. 
+                    Con te ho scoperto cosa significa amare davvero.
+                </p>
+                <div class="secret-image-placeholder">
+                    📸 [Aggiungi qui un'altra foto speciale]
+                </div>
+            </div>
+            <button class="btn-next-secret" onclick="promptSecret(3)">
+                Scopri la Sorpresa Finale →
+            </button>
+        </div>
+    </div>
+
+    <div class="page" id="secretPage3">
+        <button class="btn-back" onclick="backToMap()">← Torna alla Mappa</button>
+        <div class="secret-content">
+            <h2 class="secret-title">💝 Sorpresa Finale 💝</h2>
+            <div class="secret-box final">
+                <p class="secret-text large">
+                    Buon San Valentino, amore mio! ❤️
+                </p>
+                <p class="secret-text">
+                    Questo è solo l'inizio di tantissimi altri momenti insieme. 
+                    Ti amo oggi, domani e per sempre.
+                </p>
+                <div class="secret-image-placeholder">
+                    💕 [La tua sorpresa di San Valentino]
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Password Prompt Modal -->
+    <div class="modal" id="passwordModal">
+        <div class="modal-content password-modal">
+            <span class="modal-close" onclick="closePasswordModal()">&times;</span>
+            <h3 class="password-title">Inserisci la Password Segreta</h3>
+            <p class="password-hint" id="passwordHint"></p>
+            <input type="text" class="password-input" id="passwordInput" placeholder="gg/mm/aaaa">
+            <button class="btn-submit" onclick="checkPassword()">Sblocca</button>
+            <p class="password-error" id="passwordError"></p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
