--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
         <div class="modal-content password-modal">
             <span class="modal-close" onclick="closePasswordModal()">&times;</span>
             <h3 class="password-title">Inserisci la Password Segreta</h3>
-            <p class="password-hint" id="passwordHint">21/11/2024</p>
+            <p class="password-hint" id="passwordHint"></p>
             <input type="text" class="password-input" id="passwordInput" placeholder="gg/mm/aaaa">
             <button class="btn-submit" onclick="checkPassword()">Sblocca</button>
             <p class="password-error" id="passwordError"></p>
@@ -699,7 +699,7 @@
 
         // Password per ogni sezione segreta - CAMBIA QUESTE DATE!
         const passwords = {
-            1: "14/02/2024",  // Cambia con una data importante per voi
+            1: "21/11/2024",  // Cambia con una data importante per voi
             2: "25/12/2023",  // Cambia con un'altra data speciale
             3: "01/01/2024"   // Cambia con un'altra data significativa
         };
