Update password hint in modal

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
         <div class="modal-content password-modal">
             <span class="modal-close" onclick="closePasswordModal()">&times;</span>
             <h3 class="password-title">Inserisci la Password Segreta</h3>
-            <p class="password-hint" id="passwordHint"></p>
+            <p class="password-hint" id="passwordHint">21/11/2024</p>
             <input type="text" class="password-input" id="passwordInput" placeholder="gg/mm/aaaa">
             <button class="btn-submit" onclick="checkPassword()">Sblocca</button>
             <p class="password-error" id="passwordError"></p>
