Update Primo Premio section content in index.html

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
 <!-- Primo Premio -->
 <div id="prizeSection" class="hidden">
-    <h2>🏆 Primo Premio</h2>
-    <p>Tutta la magia del nostro primo premio è qui per te!</p>
-    <button class="btn-next" onclick="showValentine()">Scopri la sorpresa finale →</button>
+    <h2>🏆</h2>
+    <p>Tutta lo stress possiamo sfogare, e in questo posto dobbiamo andare!</p>
+    <button class="btn-next" onclick="showValentine()">Avanti →</button>
 </div>
 
 <!-- Domanda finale -->
