Update password section and prize section text

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 <!-- Password -->
 <div id="passwordSection">
-    <h1>🔒 Nuove Avventure</h1>
-    <p>Indovina la password per iniziare la tua avventura:</p>
+    <h1>🔒 Unlock this to go ahead</h1>
+    <p></p>
     <input type="text" id="passwordInput" placeholder="gg/mm/aaaa">
     <button class="btn-submit" onclick="checkPassword()">Sblocca</button>
     <p id="passwordError" style="color: red;"></p>
@@ -62,8 +62,9 @@
 
 <!-- Primo Premio -->
 <div id="prizeSection" class="hidden">
-    <h2>🏆</h2>
-    <p>Tutta lo stress possiamo sfogare, e in questo posto dobbiamo andare!</p>
+    <h2>A little gift before the test, <br>
+Solve it well, you know the rest. <br></h2>
+    <p>All the stress goes away, if we make this activity YAY!</p>
     <button class="btn-next" onclick="showValentine()">Avanti →</button>
 </div>
 
