--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>San Valentino ❤️</title>
+<title>ops❤️</title>
 <style>
     body {
         font-family: 'Cormorant Garamond', serif;
@@ -54,7 +54,7 @@
 <!-- Password -->
 <div id="passwordSection">
     <h1>🔒 Unlock this to go ahead</h1>
-    <p></p>
+    <p>what's our date, be brave</p>
     <input type="text" id="passwordInput" placeholder="gg/mm/aaaa">
     <button class="btn-submit" onclick="checkPassword()">Sblocca</button>
     <p id="passwordError" style="color: red;"></p>
